solved problem with calculator

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
               <div class="calculator__left-form-cards">
                 <div class="calculator__left-form-box">
-                  <p class="calculator__left-form-title">Mortagage Team</p>
+                  <p class="calculator__left-form-title">Mortagage Term</p>
                   <div class="calculator__left-form-field">
                     <input
                       class="calculator__left-form-input"
