--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="/assets/fonts/PlusJakartaSans-VariableFont_wght.ttf"
+      href="assets/fonts/PlusJakartaSans-VariableFont_wght.ttf"
     />
     <link
       rel="stylesheet"
-      href="/assets/fonts/PlusJakartaSans-VariableFont_wght.ttf"
+      href="assets/fonts/PlusJakartaSans-VariableFont_wght.ttf"
     />
     <link
       rel="stylesheet"
-      href="/assets/fonts/static/PlusJakartaSans-Bold.ttf"
+      href="assets/fonts/static/PlusJakartaSans-Bold.ttf"
     />
     <link
       rel="stylesheet"
-      href="/assets/fonts/static/PlusJakartaSans-Medium.ttf"
+      href="assets/fonts/static/PlusJakartaSans-Medium.ttf"
     />
 
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./dist/img/favicon-32x32.png"
+      href="dist/img/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/dist/css/style.min.css" />
+    <link rel="stylesheet" href="dist/css/style.min.css" />
     <title>Frontend Mentor | Mortgage repayment calculator</title>
   </head>
   <body class="body">
@@ -132,7 +132,7 @@
               <button class="calculator__left-submit">
                 <img
                   class="calculator__left-submit-img"
-                  src="/dist/img/icon-calculator.svg"
+                  src="dist/img/icon-calculator.svg"
                   alt="ikonka kalkulatora"
                 />
                 Calculate Repayments
@@ -144,7 +144,7 @@
           <div class="calculator__right-common-box">
             <img
               class="calculator__right-common-img"
-              src="/dist/img/illustration-empty.svg"
+              src="dist/img/illustration-empty.svg"
               alt="ilustracja przedstawia rachunki inwestycyjne na kartce papieru"
             />
 
@@ -179,6 +179,6 @@
         </div>
       </div>
     </div>
-    <script src="/dist/js/index.min.js"></script>
+    <script src="dist/js/index.min.js"></script>
   </body>
 </html>
